--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,7 +6,7 @@ build:
     coverage:
       tests:
         override:
-          - command:
+          - command: composer phpunit
             coverage:
               file: phpunit.coverage.xml
               format: clover
