--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "elitesports/api",
-    "description": "Aplicacion que consume libreria",
+    "description": "APIREST for Elite Wizard",
     "type": "project",
     "license": "MIT",
     "autoload": {
@@ -18,10 +18,11 @@
     "require": {
         "php": ">=5.6.20",
         "elitelib/persistence": "dev-main",
-        "guzzlehttp/guzzle": "^7.0",
-        "phpunit/phpunit": "9.5.0"
+        "guzzlehttp/guzzle": "^7.0"
+        
     },
     "require-dev": {
+        "phpunit/phpunit": "9.5.0",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "scripts": {
