--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.6.20",
-        "elitelib/persistence": "dev-main",
+        "elitelib/persistence": "^0.0.4",
         "guzzlehttp/guzzle": "^7.0"
         
     },
